setup weather forecast for detail page

--- a/m3-java-capstone/src/main/webapp/css/site.css
+++ b/m3-java-capstone/src/main/webapp/css/site.css
@@ -40,3 +40,12 @@
 .parkDescription {
 	font-size: 1.2em;
 }
+
+/**** Weather Forecast Day 1 ****/
+.firstDay {
+	
+}
+/**** Weather Forecast Day 2-5 ****/
+.fourDays {
+	
+}
