--- a/m3-java-capstone/src/main/webapp/WEB-INF/jsp/common/header.jspf
+++ b/m3-java-capstone/src/main/webapp/WEB-INF/jsp/common/header.jspf
@@ -6,10 +6,14 @@
 <head>
 <meta name="viewport" content="width=device-width" />
 <title><c:out value="${pageTitle}" /></title>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	
 <c:url value="/css/site.css" var="cssUrl" />
 <link rel="stylesheet" href="${cssUrl}" />
 </head>
@@ -30,7 +34,7 @@
     <div class="navbar-nav">
     	<c:url var="homePageUrl" value="/" />
       <a class="nav-item nav-link active" href="${homePageUrl}">Home <span class="sr-only">(current)</span></a>
-      <c:url var="surveyPageUrl" value="/survey" />
+      <c:url var="surveyPageUrl" value="/submitSurvey" />
       <a class="nav-item nav-link" href="${surveyPageUrl}">Survey</a>
     </div>
   </div>
