Added fonts folder, functionality not yet there

--- a/m3-java-capstone/src/main/webapp/WEB-INF/jsp/common/footer.jspf
+++ b/m3-java-capstone/src/main/webapp/WEB-INF/jsp/common/footer.jspf
@@ -1,4 +1,6 @@
 <hr>
 </section>
+
+<p style="text-align: center; font-size: .5em;">Code by Barbara Irons and Bethany Warner 2018</p>
 </body>
 </html>
