--- a/m3-java-capstone/src/main/webapp/css/site.css
+++ b/m3-java-capstone/src/main/webapp/css/site.css
@@ -1,3 +1,17 @@
+/*FONTS*/
+@font-face {
+    font-family: 'Broadbay';
+    src: url('../fonts/broadbay.ttf');
+}
+
+body {
+	width: 100%;
+	background-color: #212121;
+	font-family: 'Broadbay', regular;
+}
+
+
+
 #logo {
 	width: 50%;
 }
@@ -14,6 +28,10 @@
 	width: 90%;
 	text-align: left;
 	line-height: 1.7;
+}
+
+.allParkInfo:hover {
+	border-color: #ababab;
 }
 
 .allParkImages {
@@ -38,6 +56,7 @@
 	font-size: 1.5em;
 	display: inline;
 	float: left;
+	font-family: 'Broadbay';
 }
 
 .allParkDescriptions {
