--- a/m3-java-capstone/src/main/webapp/css/site.css
+++ b/m3-java-capstone/src/main/webapp/css/site.css
@@ -1,16 +1,45 @@
 /*FONTS*/
 @font-face {
-    font-family: 'Broadbay';
-    src: url('../fonts/broadbay.ttf');
+    font-family: 'american_purposeregular';
+    src: url('american_purpose-webfont.woff2') format('woff2'),
+         url('american_purpose-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'broadbaynormal';
+    src: url('broadbay-webfont.woff2') format('woff2'),
+         url('broadbay-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'chlakh_demoregular';
+    src: url('chlakh_demo-webfont.woff2') format('woff2'),
+         url('chlakh_demo-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'haarlem_deco_demoregular';
+    src: url('haarlem_deco_demo-webfont.woff2') format('woff2'),
+         url('haarlem_deco_demo-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
 body {
 	width: 100%;
 	background-color: #212121;
-	font-family: 'Broadbay', regular;
+	font-family: 'broadbaynormal';
 }
-
-
 
 #logo {
 	width: 50%;
@@ -56,7 +85,7 @@ body {
 	font-size: 1.5em;
 	display: inline;
 	float: left;
-	font-family: 'Broadbay';
+	font-family: 'broadbaynormal';
 }
 
 .allParkDescriptions {
@@ -64,6 +93,10 @@ body {
 }
 
 /**** Weather Forecast Day 1 ****/
+#weather {
+	content-align: center;
+}
+
 .firstDay {
 	text-align: center;
 	width:25%;
@@ -121,3 +154,21 @@ body {
 .detailDescription {
 	
 }
+/* SURVEY RESULTS PAGE TAGS **************************/
+.allParkNamesOnSurvey {
+	font-size: 1.5em;
+	display: block;
+	float: left;
+	font-family: 'broadbaynormal';
+}
+
+.surveyVotesTalley {
+	font-size: 1.5em;
+	display: block;
+	float: left;
+}
+
+
+
+
+
